--- a/travel.html
+++ b/travel.html
@@ -21,13 +21,13 @@
 		<p>I love traveling and capturing the moments. In 25 months I have travelled 23 states out of 50 states in the United States. Here are some of my favorite places:</p>
 			 
 	<h3>Alaska:</h3>
-		<img src = "alaska.jpg" alt = "image">
+		<img src = "images/alaska.jpg" alt = "image">
 				
 	<h3>Illinois:</h3>
 		<iframe src="https://www.youtube.com/embed/vs0G0pxoSJo"></iframe>
 
 	<h3>Las Vegas:</h3>
-		<img src = "las.jpg" alt = "image">
+		<img src = "images/las.jpg" alt = "image">
 	
 
 	<h3>My Google Maps Demo</h3>
