--- a/travel.html
+++ b/travel.html
@@ -34,24 +34,24 @@
    	 <div id="map"></div>
    		 <script>
     		  function initMap() {
-     		  var uluru = {lat: 64.200841, lng: -149.493673};
-     		  var asd = {lat: 64.493673, lng: -149.200841};
-     		  var xcv = {lat: 64, lng: -149};
+     		  var Alaska = {lat: 64.200841, lng: -149.493673};
+     		  var Yellowstone = {lat: 44.427963, lng: -110.588455};
+     		  var DeathValley = {lat: 36.505389, lng: -117.079408};
       		  var map = new google.maps.Map(document.getElementById('map'), {
          	  	zoom: 8,
-         		 center: uluru,
+         		 center: Alaska,
          		 mapTypeId: 'satellite'
      	   });
         var marker = new google.maps.Marker({
-          position: uluru,
+          position: Alaska,
           map: map
         });
         var marker = new google.maps.Marker({
-          position: asd,
+          position: Yellowstone,
           map: map
         });
         var marker = new google.maps.Marker({
-          position: xcv,
+          position: DeathValley,
           map: map
         });
       }
