--- a/travel.html
+++ b/travel.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body bgcolor = "#000000">
+<body>
 	<nav class="nav">
 
 		<ul>
