--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 			<li><a href="index.html">About Me</a></li>
 			<li><a href="resume.html">Resume</a></li>
-       		<li><a href="travel.html">Traveling</a></li>
+       		<li><a href="photography.html">Photography</a></li>
   	  </ul>
     </nav>
     	
