--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="index.html">About Me</a></li>
 			<li><a href="resume.html">Resume</a></li>
-       		<li><a href="travel.html">Traveling</a></li>
+       		<li><a href="photography.html">Photography</a></li>
   	  </ul>
     </nav>
 	
