--- a/photography.html
+++ b/photography.html
@@ -71,7 +71,7 @@ float: center;
 		<ul>
 			<li><a href="index.html">About Me</a></li>
 			<li><a href="resume.html">Resume</a></li>
-			<li><a href="travel.html">Traveling</a></li>
+       		<li><a href="photography.html">Photography</a></li>
   	  </ul>
     </nav>
 
