--- a/photography.html
+++ b/photography.html
@@ -76,27 +76,27 @@ float: center;
     </nav>
 
 <div class="mySlides">
-  <img id = "image4" src="images/alaska.jpg">
+  <img id = "image4" src="images/alaska.JPG">
   	<h2 id = "h64" style="font-size:40px;">Alaska</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image1" src="images/glacier.jpg">
+  <img id = "image1" src="images/glacier.JPG">
   <h2 id = "h61" style="font-size:38px;">Glacier Bay National Park</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image2" src="images/jun.jpg">
+  <img id = "image2" src="images/jun.JPG">
   	<h2 id = "h62" style="font-size:38px;">Juneau</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image4" src="images/hob.jpg">
+  <img id = "image4" src="images/hob.JPG">
    	<h2 id = "h62" style="font-size:38px;">Hobart Bay</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image4" src="images/star.jpg">
+  <img id = "image4" src="images/star.JPG">
 </div>
 
 <div class="video">
