--- a/photography.html
+++ b/photography.html
@@ -127,11 +127,32 @@ function carousel() {
    		 <script>
     		  function initMap() {
      		  var Alaska = {lat: 64.200841, lng: -149.493673};
-     		  var Yellowstone = {lat: 44.427963, lng: -110.588455};
-     		  var DeathValley = {lat: 36.505389, lng: -117.079408};
+     		  var PA = {lat: 41.203322, lng: -77.194525};
+     		  var NJ = {lat: 39.557530, lng: -74.816895};
+     		  var ML = {lat: 39.013315, lng: -76.970215};
+     		  var VR = {lat: 37.250554, lng: -78.793945};
+     		  var West Virginia = {lat: 38.464880, lng: -81.123047};
+     		  var OH = {lat: 40.332413, lng: -82.880859};
+     		  var MI = {lat: 43.773573, lng: -84.814453};
+     		  var IN = {lat: 40.147914, lng: -86.176758};
+     		  var KN = {lat: 37.355422, lng: -85.056152};
+     		  var TN = {lat: 35.660086, lng: -86.726074};
+			  var GA = {lat: 32.605254, lng: -83.342285};
+			  var IL = {lat: 40.164707, lng: -89.516602};
+			  var WI = {lat: 44.686718, lng: -89.560547};
+			  var MN = {lat: 46.182208, lng: -94.548340};
+			  var ND = {lat: 47.385798, lng: -100.415039};
+			   var SD = {lat: 44.514624, lng: -100.327148};
+			    var WY = {lat: 42.945366, lng: -107.797852};
+			     var MO = {lat: 46.894924, lng: -109.687500;
+			      var WA = {lat: 47.254068, lng: -120.454102};
+			       var IA = {lat: 43.394072, lng: -114.301758};
+			        var NV = {lat: 39.712469, lng: -116.938477};
+			         var CO = {lat: 39.285951, lng: -105.578613};
+			      
       		  var map = new google.maps.Map(document.getElementById('map'), {
          	  	zoom: 2,
-         		 center: Alaska,
+         		 center: IL,
          		 mapTypeId: 'satellite'
      	   });
         var marker = new google.maps.Marker({
@@ -139,13 +160,94 @@ function carousel() {
           map: map
         });
         var marker = new google.maps.Marker({
-          position: Yellowstone,
+          position: PA,
           map: map
         });
         var marker = new google.maps.Marker({
-          position: DeathValley,
+          position: NJ,
           map: map
         });
+         var marker = new google.maps.Marker({
+          position: ML,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: VR,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: West Virginia,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: OH,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: MI,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: IN,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: KN,
+          map: map
+        });
+ var marker = new google.maps.Marker({
+          position: TN,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: GA,
+          map: map
+        });
+ var marker = new google.maps.Marker({
+          position: IL,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: WI,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: MN,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: ND,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: SD,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: WY,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: MO,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: WA,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: IA,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: NV,
+          map: map
+        });
+         var marker = new google.maps.Marker({
+          position: CO,
+          map: map
+        });
+
       }
     </script>
     <script async defer
