--- a/photography.html
+++ b/photography.html
@@ -152,7 +152,7 @@ function carousel() {
 			      
       		  var map = new google.maps.Map(document.getElementById('map'), {
          	  	zoom: 2,
-         		 center: IL,
+         		 center: Alaska,
          		 mapTypeId: 'satellite'
      	   });
         var marker = new google.maps.Marker({
