--- a/photography.html
+++ b/photography.html
@@ -5,6 +5,9 @@
   <title>Photos</title>
 	
 	<style>
+body{
+	backgorund color="#ffffff"
+		}
 .mySlides {display:none;}
 
 #image1{
@@ -67,7 +70,7 @@ float: center;
 	
 </head>
 
-<body bgcolor="#ffffff">
+<body>
 
 <nav class="nav1">
 
