--- a/photography.html
+++ b/photography.html
@@ -82,27 +82,27 @@ float: center;
     </nav>
 
 <div class="mySlides">
-  <img id = "image4" src="images/alaska.JPG">
+  <img id = "image4" src="images/alaska.JPG" alt="Alaska">
   	<h2 id = "h64" style="font-size:40px;">Alaska</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image1" src="images/glacier.JPG">
+  <img id = "image1" src="images/glacier.JPG" alt="Glacier">
   <h2 id = "h61" style="font-size:38px;">Glacier Bay National Park</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image2" src="images/jun.JPG">
+  <img id = "image2" src="images/jun.JPG" alt="Juneau">
   	<h2 id = "h62" style="font-size:38px;">Juneau</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image4" src="images/hob.JPG">
+  <img id = "image4" src="images/hob.JPG" alt="Hobert Bay">
    	<h2 id = "h62" style="font-size:38px;">Hobart Bay</h2>
 </div>
 
 <div class="mySlides">
-  <img id = "image4" src="images/star.JPG">
+  <img id = "image4" src="images/star.JPG" alt="Cruise">
 </div>
 
 <div class="video">
