--- a/photography.html
+++ b/photography.html
@@ -30,6 +30,11 @@ width: 1423px;
 height: 822px;
 float: center;
 }
+#image5{
+width: 1423px;
+height: 822px;
+float: center;
+}
 
 h2 { 
    position: absolute; 
@@ -52,7 +57,10 @@ top: 300px;
 text-align: center;
 top: 300px; 
 }
-
+#h65{
+text-align: center;
+top: 300px; 
+}
 .video {display: none:}
 
 #video1{
@@ -82,8 +90,8 @@ float: center;
     </nav>
 
 <div class="mySlides">
-  <img id = "image4" src="images/alaska.JPG" alt="Alaska">
-  	<h2 id = "h64" style="font-size:40px;">Alaska</h2>
+  <img id = "image5" src="images/alaska.JPG" alt="Alaska">
+  	<h2 id = "h65" style="font-size:40px;">Alaska</h2>
 </div>
 
 <div class="mySlides">
@@ -97,12 +105,13 @@ float: center;
 </div>
 
 <div class="mySlides">
-  <img id = "image4" src="images/hob.JPG" alt="Hobert Bay">
-   	<h2 id = "h62" style="font-size:38px;">Hobart Bay</h2>
+  <img id = "image3" src="images/hob.JPG" alt="Hobert Bay">
+   	<h2 id = "h63" style="font-size:38px;">Hobart Bay</h2>
 </div>
 
 <div class="mySlides">
   <img id = "image4" src="images/star.JPG" alt="Cruise">
+	<h2 id = "h64" style="font-size:38px;">Glacier Bay</h2>
 </div>
 
 <div class="video">
