--- a/photography.html
+++ b/photography.html
@@ -142,7 +142,7 @@ function carousel() {
 
 </script>
 
-<h3>My Google Maps Demo</h3>
+<h2>These are my 3 best vacation spots by far</h2>
    	 <div id="map"></div>
    		 <script>
     		  function initMap() {
