--- a/photography.html
+++ b/photography.html
@@ -94,6 +94,7 @@ float: center;
   	  </ul>
     </nav>
 
+	<p>Here are a few clicks by me from my Alaska trip.</p>
 <div class="mySlides">
   <img id = "image5" src="images/alaska.JPG" alt="Alaska">
   	<h2 id = "h65" style="font-size:40px;">Alaska</h2>
@@ -142,7 +143,7 @@ function carousel() {
 
 </script>
 
-<h2>These are my 3 best vacation spots by far</h2>
+<h3>My 3 favorite vacation spots/h3>
    	 <div id="map"></div>
    		 <script>
     		  function initMap() {
