--- a/photography.html
+++ b/photography.html
@@ -143,7 +143,7 @@ function carousel() {
 
 </script>
 
-<h3>My 3 favorite vacation spots/h3>
+<h3>My 3 favorite vacation spots</h3>
    	 <div id="map"></div>
    		 <script>
     		  function initMap() {
