--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<h2> Nihar Patel </h2>
 	
 		<h3> Introduction </h3>
-		<p> I am from India. I am a transfer student at Illinois Institute of Technology. </p>
+		<p> Hello! I am a transfer student majoring in ITM. I invest in Cryptocurrencies like Bitcoin, Etheurem, and Litecoin.</p>
+		<p>This year, I have been pretty successful with my investment by gaining more than 220% in returns. Recently, I have started my own real estate business. I buy homes at a rate lower than the market value and flip the property for profits.</p>
+		<p>I also read books in my spare time.</p>
 		
 		<h3> Hobbies </h3>
 		<ul>
