--- a/index.html
+++ b/index.html
@@ -31,13 +31,33 @@
 			<li> Reading Non-Fiction books </li>
 			<li> Hiking </li>
 		</ul>
-		<h3> My November Tasks </h3>
-		<ul> 
-			<li> <strike> Establish my own Real Estate wholesale business</strike> </li>
-			<li> <strike>Fortune Builders seminar</strike> </li>
-			<li> Explore new places</li>
-			<li> Buy my first investment property </li> 
+		<h2> Nihar Patel </h2>
+	
+		<h3> Introduction </h3>
+		<p> Hello! I am a transfer student majoring in ITM. I invest in Cryptocurrencies like Bitcoin, Etheurem, and Litecoin.</p>
+		<p>This year, I have been pretty successful with my investment by gaining more than 220% in returns. Recently, I have started my own real estate business. I buy homes at a rate lower than the market value and flip the property for profits.</p>
+		<p>I also read books in my spare time.</p>
+		
+		<h3> Hobbies </h3>
+		<ul>
+			<li> Photography </li>
+			<li> Reading Non-Fiction books </li>
+			<li> Hiking </li>
 		</ul>
+		
+		<h3> My favorite read this month <h3>
+		<ul>
+			<li> Blink: The Power of Thinking Without Thinking by Malcolm Gladwell - I love this book for a reason. It says how a well thought decision in one's life is not as rational as some decisions that are made in the blink of an eye.</li>
+		</ul>
+		
+		<h3> Some great books I read in past few months </h3>
+		<ul> 
+			<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
+			<li> The Power by Rhonda Byrne - This book is a sequel to The Secret. </li>
+			<li> Unf*ck Yourself by Gary John Bishop - The author stated that in a day, 95% of humans talks are with themselves (self-talk) and he talks about how we should change our talks with our subconscious mind.</li>
+			<li> Cryptocurrency Trading & Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
+		</ul>
+		
 		
 </body>
 
