--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<li> Hiking </li>
 		</ul>
 		
-		<h3> My favorite read this month <h3>
+		<h3> My favorite read this month </h3>
 		<ul>
 			<li> Blink: The Power of Thinking Without Thinking by Malcolm Gladwell - I love this book for a reason. It says how a well thought decision in one's life is not as rational as some decisions that are made in the blink of an eye.</li>
 		</ul>
