--- a/photography.html
+++ b/photography.html
@@ -3,89 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Photos</title>
-	
-	<style>
-body{
-	backgorund color="#ffffff"
-		}
-.mySlides {display:none;}
-
-#image1{
-width: 1423px;
-height: 822px;
-float: center;
-}
-#image2{
-width: 1423px;
-height: 822px;
-float: center;
-}
-#image3{
-width: 1423px;
-height: 822px;
-float: center;
-}
-#image4{
-width: 1423px;
-height: 822px;
-float: center;
-}
-#image5{
-width: 1423px;
-height: 822px;
-float: center;
-}
-
-h2 { 
-   position: absolute; 
-   top: 200px; 
-   left: 0; 
-   width: 100%; 
-}
-
-#h61{
-text-align: center;
-top: 300px; 
-}
-
-#h62{
-text-align: center;
-top: 300px; 
-}
-
-#h63{
-text-align: center;
-top: 300px; 
-}
-		
-#h64{
-text-align: center;
-top: 300px; 
-}
-#h65{
-text-align: center;
-top: 300px; 
-}
-.video {display: none:}
-
-#video1{
-width: 1423px;
-height: 822px;
-float: center;
-}
-
-#map {
-        height: 400px;
-        width: 100%;
-       }
-
-</style>
-	
+	 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-<nav class="nav1">
+<nav class="nav">
 
 		<ul>
 			<li><a href="index.html">About Me</a></li>
