--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,8 @@
   	  </ul>
     </nav>
 
-	<p>Here are a few clicks by me from my Alaska trip.</p>
+	<h3>Here are a few clicks by me from my Alaska trip.</h3
+		>
 <div class="mySlides">
   <img id = "image5" src="images/alaska.JPG" alt="Alaska">
   	<h2 id = "h65" style="font-size:40px;">Alaska</h2>
@@ -44,7 +45,7 @@
 </div>
 
 <div class="video">
-<h3>TimeLapse</h3>
+	<h3>TimeLapse</h3>
 		<iframe id = "video1" src="https://www.youtube.com/embed/vs0G0pxoSJo"></iframe>
 </div>
 
