--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 	
 	<div class="resume">
 		<h3> Education </h3>
-				<ul> 
+				<ul class="a"> 
 					<li> Associate in applied science – Computer Science GPA 3.0 August 2015 – June 2017  </li>
 					<li> Bachler of Science - Information Technology and Management August 2017 – Present </li>
 					<li> Certified Ethical Hacker (CCEH) from Convants Information Security Pvt. Ltd. Issued by USDLA </li>
@@ -46,7 +46,7 @@
 	
 	<div class="resume">		
 		<h3> Skills </h3>
-				<ul>
+				<ul class="a">
 					<li> Programming Language: JAVA Programming and C Programming </li>
 					<li> Microsoft Office Suite, Lightroom, Corel Draw </li>
 					<li> Operating System: Windows, MacOS, Kali Linux, and Ubuntu</li>
@@ -76,7 +76,7 @@
 	
 	<div class="resume">
 		<h3> Activities </h3>
-				<ul>
+				<ul class="a">
 					<li> Harper College Astronomy Club </li>
 					<li> Photography </li>
 					<li> Sports: Swimming, Skating, Soccer </li>
