--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
 		<h3> Work </h3>
 				
 					 <h4>Krishil Tax and Investments Ltd. November 2016 - Present</h4>
-						<ul> 
+						<ul class="c"> 
 							<li> Accounting </li>
 							<li> Tax Returns </li>
 							<li> Payrolls </li>
@@ -57,17 +57,17 @@
 		<h3> Projects </h3>
 				
 					<h4> High School final project on Banking System on Java platform </h4>
-						<ul> 
+						<ul class="c"> 
 							<li> Java GUI </li>
 							<li> Database (MYSQL) </li>
 						</ul>
 					<h4> Raspberry Pi </h4>
-						<ul> 
+						<ul class="c"> 
 							<li> Smart mirror </li>
 							<li> Portable Linux computer </li>
 						</ul>
 					<h4> Hacking (Kali Linux) </h4>
-						<ul>
+						<ul class="c">
 							<li> Protected WPA/WPA2 wireless network </li>
 							<li> Packet Sniffing </li>
 							<li> Compromising an android phone </li>
