--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
   	  </ul>
     </nav>
     	
+	<section>
 	<h1> Nihar Patel </h1>
 	
 		<h3> Introduction </h3>
 		<p class="big"> Hello! I am a transfer student majoring in ITM. I invest in Cryptocurrencies like Bitcoin, Etheurem, and Litecoin.</p>
 		<p>This year, I have been pretty successful with my investment by gaining more than 220% in returns. Recently, I have started my own real estate business. I buy homes at a rate lower than the market value and flip the property for profits.</p>
 		<p class="big">I also read books in my spare time.</p>
+	</section>
 		
 		<h3> Hobbies </h3>
 			<ul class="a">
@@ -37,6 +39,7 @@
 			<li> Blink: The Power of Thinking Without Thinking by Malcolm Gladwell - I love this book for a reason. It says how a well thought decision in one's life is not as rational as some decisions that are made in the blink of an eye.</li>
 		</ul>
 		
+	<section>
 		<h3> Some great books I read in past few months </h3>
 			<ol class="b"> 
 				<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
@@ -44,6 +47,7 @@
 				<li> Unf*ck Yourself by Gary John Bishop - The author stated that in a day, 95% of humans talks are with themselves (self-talk) and he talks about how we should change our talks with our subconscious mind.</li>
 				<li> Cryptocurrency Trading & Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
 			</ol>
+	</section>
 		
 </body>
 
