--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 		<p class="big">I also read books in my spare time.</p>
 	</section>
 		
-		<h3> Hobbies </h3>
-			<ul class="a">
-				<li> Photography </li>
-				<li> Reading Non-Fiction books </li>
-				<li> Hiking </li>
-			</ul>
+		<div class="med">
+			<h3> Hobbies </h3>
+				<ul class="a">
+					<li> Photography </li>
+					<li> Reading Non-Fiction books </li>
+					<li> Hiking </li>
+				</ul>
+		</div>
 		
 		<h3> My favorite read this month </h3>
 		<ul class="c">
@@ -40,13 +42,17 @@
 		</ul>
 		
 	<section>
+		<div class="media">
+
 		<h3> Some great books I read in past few months </h3>
-			<ol class="b"> 
-				<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
-				<li> The Power by Rhonda Byrne - This book is a sequel to The Secret. </li>
-				<li> Unf*ck Yourself by Gary John Bishop - The author stated that in a day, 95% of humans talks are with themselves (self-talk) and he talks about how we should change our talks with our subconscious mind.</li>
-				<li> Cryptocurrency Trading & Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
-			</ol>
+				<ol class="b"> 
+					<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
+					<li> The Power by Rhonda Byrne - This book is a sequel to The Secret. </li>
+					<li> Unf*ck Yourself by Gary John Bishop - The author stated that in a day, 95% of humans talks are with themselves (self-talk) and he talks about how we should change our talks with our subconscious mind.</li>
+					<li> Cryptocurrency Trading & Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
+				</ol>
+				
+		</div>
 	</section>
 		
 </body>
