--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
 					<li> The Power by Rhonda Byrne - This book is a sequel to The Secret. </li>
 					<li> Unf*ck Yourself by Gary John Bishop - The author stated that in a day, 95% of humans talks are with themselves (self-talk) and he talks about how we should change our talks with our subconscious mind.</li>
-					<li> Cryptocurrency Trading & Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
+					<li> Cryptocurrency Trading and Investing by Aimee Vo - This is the book I started learning about cryptocurrency, blockchain and how to trade them to earn passive income. </li>
 				</ol>
 				
 		</div>
