--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 	<h1> Nihar Patel </h1>
 	
 		<h3> Introduction </h3>
-		<p class="big"> Hello! I am a transfer student majoring in ITM. I invest in Cryptocurrencies like Bitcoin, Etheurem, and Litecoin.</p>
-		<p>This year, I have been pretty successful with my investment by gaining more than 220% in returns. Recently, I have started my own real estate business. I buy homes at a rate lower than the market value and flip the property for profits.</p>
-		<p class="big">I also read books in my spare time.</p>
+		<p class="big"> I am a senior at Illinois Institute of Technology at Chicago. My major is Information Technology and Management (ITM) with concentration in Cyber Security. I am Certified Ethical Hacker (CEH). I have also taken classes for CCNA Switching and Routing.
+			I enjoy designing networks and security. Also, I have taken psychology classes which has given me vast amount of knowledge about designing creative website interfaces, Java GUIs. I am a photographer by hobby which gives me the skills to multimedia editing Camtasia, Adobe Lightroom. </p>
 	</section>
 		
 		<div class="med">
