--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</ul>
 		</div>
 		
-		<h3> My favorite read this month </h3>
+		<h3> Book of the month </h3>
 		<ul class="c">
 			<li> Blink: The Power of Thinking Without Thinking by Malcolm Gladwell - I love this book for a reason. It says how a well thought decision in one's life is not as rational as some decisions that are made in the blink of an eye.</li>
 		</ul>
@@ -43,7 +43,7 @@
 	<section>
 		<div class="media">
 
-		<h3> Some great books I read in past few months </h3>
+		<h3> Some books I read in past few months </h3>
 				<ol class="b"> 
 					<li> The Secret by Rhonda Byrne - This book is based on pseudo-scientific 'law of attraction' which basically means that our thoughts create the life we live. This book has changed the way I see the world and always be positive under any circumstances. </li>
 					<li> The Power by Rhonda Byrne - This book is a sequel to The Secret. </li>
