--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,7 @@
   	  </ul>
     </nav>
 
-	<h3>Here are a few clicks by me from my Alaska trip.</h3
+	<h3>Photographs by me</h3
 		>
 <div class="mySlides">
   <img id = "image5" src="images/alaska.JPG" alt="Alaska">
@@ -67,7 +67,7 @@ function carousel() {
 
 </script>
 
-<h3>My 3 favorite vacation spots</h3>
+<h3>Vacation spots</h3>
    	 <div id="map"></div>
    		 <script>
     		  function initMap() {
