--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 				</ul>
 		</div>
 		
+	<section>
 		<h3> Book of the month </h3>
 		<ul class="c">
 			<li> Blink: The Power of Thinking Without Thinking by Malcolm Gladwell - I love this book for a reason. It says how a well thought decision in one's life is not as rational as some decisions that are made in the blink of an eye.</li>
 		</ul>
-		
+	</section>
+	
 	<section>
 		<div class="media">
 
